--- a/docker/ci/Dockerfile
+++ b/docker/ci/Dockerfile
@@ -19,7 +19,7 @@ ENV CHAIN="/go/src/chain" \
 ADD install /usr/bin
 
 RUN yum -y update \
-    && yum install -y autoconf automake bash bzip2 curl gcc gcc-c++ gcc48-c++ git libtool make openssl-devel ruby snappy snappy-devel wget unzip zlib zlib-devel \
+    && yum install -y autoconf automake bash bzip2 cmake curl gcc gcc-c++ gcc48-c++ git libtool make openssl-devel ruby wget unzip zlib zlib-devel \
     && install-go && rm -f /usr/bin/install-go \
     && install-node && rm -f /usr/bin/install-node \
     && install-java && rm -f /usr/bin/install-java \
